...
            hint: AppLocalizations.of(context)!.fullLegalNameHint,
            controller: _nameController,
            keyboardType: TextInputType.name,
            textInputAction: TextInputAction.done,
            autofocus: true,
            maxLength: 150,
            semanticsIdentifier: 'fullNameField',
            prefixIcon: const Icon(Icons.person_outline),
            validator: _validateName,
            onChanged: widget.onNameChanged,
            onFieldSubmitted: (_) => _handleNext(),
          ),
          MaterialSpacing.heightMin(),
...
